--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,13 @@ body{
 }
 
 
+@media (max-width: 720px) {
+  #img{ 
+    width: 50px;
+    height: 50%;
+  }
+}
+
 @media (max-width: 600px) {
   #img{ 
     width: 40px;
